--- a/ssc-brewery/src/main/resources/templates/index.html
+++ b/ssc-brewery/src/main/resources/templates/index.html
@@ -18,18 +18,28 @@
 
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'home')}">
-<head>
-    <meta charset="UTF-8"/>
-    <title>SFG Brewery</title>
-</head>
-<body>
-<h2 th:text="#{welcomemsg}">SFG Brewery Monolith</h2>
-
-<div class="row">
-    <div class="col-md-12">
-        <img class="img-responsive" src="../static/resources/images/brewery.png" th:src="@{/resources/images/brewery.png}"/>
-    </div>
-</div>
-
-</body>
+    <head>
+        <meta charset="UTF-8"/>
+        <title>SFG Brewery</title>
+    </head>
+    <body>
+        <h2 th:text="#{welcomemsg}">SFG Brewery Monolith</h2>
+        <div class="row">
+            <div class="col-md-12">
+                <p th:if="${loginError}" class="error">Wrong Username or password</p>
+                <form th:action="@{/login}" method="post">
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" name="username" autofocus="true" autocomplete="off">
+                    <label for="password">Username:</label>
+                    <input type="password" id="password" name="password" autofocus="true" autocomplete="off">
+                    <input type="submit" value="Log In">
+                </form>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <img class="img-responsive" src="../static/resources/images/brewery.png" th:src="@{/resources/images/brewery.png}"/>
+            </div>
+        </div>
+    </body>
 </html>
