--- a/ssc-brewery/src/main/resources/templates/index.html
+++ b/ssc-brewery/src/main/resources/templates/index.html
@@ -29,7 +29,9 @@
         <h2 th:text="#{welcomemsg}">SFG Brewery Monolith</h2>
         <div class="row" sec:authorize="!isAuthenticated()">
             <div class="col-md-12">
-                <div th:if="${param.error}" class="alert alert-danger">Invalid Username or Password</div>
+                <!-- Spring uses SimpleUrlAuthenticationFailureHandler class. Check saveException method and attribute SPRING_SECURITY_LAST_EXCEPTION -->
+                <div th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']?.message} == 'Bad credentials'" class="alert alert-danger">Invalid Username or Password</div>
+                <div th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']?.message} == 'User account is locked'" class="alert alert-danger">User Account is Locked.</div>
                 <div th:if="${param.logout}" class="alert alert-success">You Have Logged Out</div>
                 <form th:action="@{/login}" method="post">
                     <label for="username">Username:</label>
@@ -48,6 +50,7 @@
                 <p><a th:href="@{/logout}">Logout</a></p>
             </div>
         </div>
+        <!--<h2 th:text="${session['SPRING_SECURITY_LAST_EXCEPTION']?.message}"></h2>-->
         <div class="row">
             <div class="col-md-12">
                 <img class="img-responsive" src="../static/resources/images/brewery.png" th:src="@{/resources/images/brewery.png}"/>
